[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://zoom.png" type="Texture" id=2]

[sub_resource type="CapsuleShape" id=1]

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.5, 0, 0, 0, -2.18557e-008, -1, 0, 0.5, -4.37114e-008, 0, 1.52082, 0 )
shape = SubResource( 1 )

[node name="CameraBase" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.78735, 0 )

[node name="CameraX" type="Spatial" parent="CameraBase"]

[node name="Camera" type="Camera" parent="CameraBase/CameraX"]

[node name="Sight" type="RayCast" parent="CameraBase/CameraX"]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -1.5, 0 )
collide_with_areas = true
collide_with_bodies = false

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="InteractiveSign" type="VBoxContainer" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -278.5
margin_top = -172.5
margin_right = 278.5
margin_bottom = 172.5
alignment = 1

[node name="TextureRect" type="TextureRect" parent="UI/InteractiveSign"]
margin_top = 130.0
margin_right = 557.0
margin_bottom = 180.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="Label" type="Label" parent="UI/InteractiveSign"]
margin_top = 184.0
margin_right = 557.0
margin_bottom = 215.0
text = "Press E
 to inspect"
align = 1
